--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "start:server": "NODE_ENV=development node server/index.js",
+    "server": "cross-env NODE_ENV='development' node server/index.js",
     "now-start": "cross-env NODE_ENV=production node server/index.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
